--- a/assignment/portfolio/assets/CSS/c1.css
+++ b/assignment/portfolio/assets/CSS/c1.css
@@ -2,22 +2,18 @@ body {
     background-color: #bdbdbd;
 }
 
-.total-container{
-    width : 80%;
-    margin : 0 auto;
-}
-
 #title-pic {
     height : 300px;
-    width : 100%;
-    margin : 0 auto;
+    width : 1800px;
+    margin-left : 50px;
     border : 7px solid rgba(60, 63, 53, 0.822);
     border-radius: 12px;
 }
 
 .container1 { 
-    margin : 40px auto;
-    width : 100%;
+    margin-top: 40px;
+    margin-left : 50px;
+    width : 1800px;
     border : 5px solid rgba(60, 63, 53, 0.822);
     display : flex;
     justify-content : center;
@@ -64,10 +60,11 @@ body {
 .about-me-container {
     display:flex;
     flex-direction : column;
-    width : 100%;
+    width : 1800px;
     height : 800px;
     border : 5px solid rgba(60, 63, 53, 0.822);
-    margin : 100px auto;
+    margin-top : 100px;
+    margin-left : 50px;
     border-radius: 7px;
 }
 
@@ -136,9 +133,10 @@ body {
 
 .dream-container{
     border-radius : 7px;
-    margin : 0 auto;
+    margin-top : 100px;
+    margin-left : 50px;
     border : 5px solid rgba(60, 63, 53, 0.822);
-    width:100%;height:500px;
+    width:1800px;height:500px;
     display : flex;
     flex-direction: column;
     /* justify-content: center; */
